# nn_fourbody_potential

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml  requirements.txt  setup.cfg
app/: TODO.md  compare_models.py  dataio.py  example.py  extrapolation.py  generate_pes_data.py  main.py  model_info.py  nn_example.py  plot_ensemble_potential.py  plot_error_against_energy.py  plot_model.py  plot_training_error.py  prune.py  rescaled_energies.py  tetrahedron_example.py  training.py  transformations.py
app/data_cleaning/: sample_statistics.py  split_energies.py
app/data_generation/: README.md  common_types.py  evaluate_random_samples.py  generate_pes_data.py  main.py  random_generation.py  side_lengths_to_cartesian.py  visualize.py
app/energy_separation/: filter_energies.py  hcp_data_removal.py  main.py  plot_energy_stem.py  split_energy_files.py
app/input_output_example/: calculate_four_body_energy_example.py  input.txt  original_output.txt
app/models/: func1dmodel.pth  nn_pes_model_16_32_32_16.pth  nn_pes_model_beta2.pth  (+6 more)
app/old_files/: domain.py  (+1 more)
data/: README.md  pyproject.toml
data/src/nn_fourbody_potential_data/: data_paths.py
models/: fourbodypara_16_32_32_16.pth  fourbodypara_32_64_64_32.pth  fourbodypara_64_128_128_64.pth  fourbodypara_8_16_16_8.pth  fourbodypara_msle_64_128_128_64.pth  fourbodypara_ssp_64_128_128_64.pth
tests/: test_extrapolated_potential.py  test_long_range_energy_corrector.py  test_permutations.py  test_reserved_deque.py  test_reserved_vector.py  test_short_range.py  test_short_range_extrapolation_types.py
(+373 files in other folders)
