[metadata]
name = nn_fourbody_potential
version = 0.1.0
author = Alexander Ibrahim
license = MIT
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
package_dir =
    = src
python_requires = >= 3.9

[options.packages.find]
where = src

[options.extras_require]
testing =
    black>=22.0
    flake8>=5.0
    mypy>=0.970
    pytest>=7.0
    pytest-cov>=3.0

[options.package_data]
cartesian = py.typed

[flake8]
max-line-length = 160
ignore = E402
per-file-ignores =
    __init__.py: F401
